--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,4 @@
-/* You can add global styles to this file, and also import other style files */
+/* Se fija la fuente de todos los componentes de las vistas del juego */
+* {
+    font-family: 'Press Start 2P', cursive;
+}
