Corregido el error de carga de la fuente, debido a unas comillas mal puestas en index.html. Se modifica también el estilo del canvas y la disposición de los elementos de la vista

--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -2,7 +2,8 @@
     <canvas #board class="game-board"></canvas>
     <div class="right-column">
       <div>
-        <h1>ng-tetris by Luis del Moral</h1>
+        <h2>ng-tetris</h2>
+        <h3>by Luis del Moral</h3>
         <p>Puntuación: {{ points }}</p>
         <p>Líneas: {{ lines }}</p>
         <p>Nivel: {{ level }}</p>
