Se cambia el texto del botón play en la vista, se implementa la pulsación de ESPACIO para que las piezas caigan 'de golpe' y se eliminan las constantes de las teclas de teclado, porque ya no se usan

--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -8,6 +8,6 @@
         <p>Líneas: {{ lines }}</p>
         <p>Nivel: {{ level }}</p>
       </div>
-      <button (click)="play()" class="play-button">Play</button>
+      <button (click)="play()" class="play-button">Jugar</button>
     </div>
   </div>
