Juego finalizado. Se ha añadido el bucle principal y todas las funciones necesarias para que las piezas se muevan, se ha añadido el canvas que muestra la pieza siguiente y funciones que controlan la finalización del juego y el conteo de los puntos. Se ha actualizado también el fichero de constantes y la vista del juego para integrar todos los elementos

--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -7,6 +7,8 @@
         <p>Puntuación: {{ points }}</p>
         <p>Líneas: {{ lines }}</p>
         <p>Nivel: {{ level }}</p>
+        <p>Pieza siguiente:</p>
+        <canvas #next class="next"></canvas>
       </div>
       <button (click)="play()" class="play-button">Jugar</button>
     </div>
